crates/toml_edit/tests/snapshots/invalid/table/multiline-key-01.stderr
TOML parse error at line 1, column 2
  |
1 | ["""tbl"""]
  |  ^^^^^^^^^
keys cannot be multi-line basic strings, expected basic string, literal string
